--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -1,19 +1,14 @@
-facebook:
-  label: Facebook
-  permalink: /facebook
-  description: Facebook tag description
+announcement:
+  label: Announcement
+  permalink: /announcement
+  description: Product announcements and updates
 
-hello:
-  label: Hello
-  permalink: /hello
-  description: Hello tag description
+tutorial:
+  label: Tutorial
+  permalink: /tutorial
+  description: Tutorials and guides
 
-docusaurus:
-  label: Docusaurus
-  permalink: /docusaurus
-  description: Docusaurus tag description
-
-hola:
-  label: Hola
-  permalink: /hola
-  description: Hola tag description
+release:
+  label: Release
+  permalink: /release
+  description: Release notes and changelogs
